[workspace]
resolver = "2"
members = ["dynode", "dyn_list"]

[workspace.package]
authors = ["Tom Boddaert"]
edition = "2021"
homepage = "https://github.com/tomBoddaert/dynode"
repository = "https://github.com/tomBoddaert/dynode"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
perf = "warn"
cargo = "warn"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
get_unwrap = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
