[package]
name = "dynode"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "A utility library for creating node-based structures that can hold dynamically sized values"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["data-structures"]
categories = ["data-structures", "no-std"]

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []

[lints]
workspace = true
